...
      child: ElevatedButton(
        onPressed: () {
          setState(() {
            PackageDetailScreen.isSubscribing = true;
          });
        },
        key: const Key('subscribeButton'),
        style: ElevatedButton.styleFrom(
          backgroundColor: const Color(0xFF0D3011),
          padding: const EdgeInsets.symmetric(horizontal: 63.5, vertical: 14.5),
          shape:
              RoundedRectangleBorder(borderRadius: BorderRadius.circular(10)),
        ),
...
        child: Row(
          mainAxisSize: MainAxisSize.min,
          mainAxisAlignment: MainAxisAlignment.center,
          children: [
            // Minus
            IconButton(
              key: const Key('minusButton'),
              onPressed: PackageDetailScreen.subscriptionWeeks <= 1
                  ? null // deactivate button if weeks <= 1
                  : () {
                      setState(() {
                        PackageDetailScreen.subscriptionWeeks--;
                      });
...
              ),
              key: const Key('durationText'),
            ),
            const SizedBox(width: 10),
            // Plus
            IconButton(
              key: const Key('plusButton'),
              onPressed: () {
                if (PackageDetailScreen.subscriptionWeeks >=
                    PackageDetailScreen.stock) {
                  _showStockAlert();
                } else {
                  setState(() {
...
              ),
            ),
            // Alert Widget
            Align(
              alignment: Alignment.bottomCenter,
              child: AnimatedOpacity(
                key: const Key('stockAlert'),
                // opacity
                opacity: _isAlertVisible ? 1.0 : 0.0,
                duration: const Duration(milliseconds: 300),
                // IgnorePointer
                child: IgnorePointer(
                  ignoring: !_isAlertVisible,
...
